# aura-sdk

./: .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml
clients/cli/: INSTALL.md  README.md  package.json
clients/cli/test/: cli.test.js
clients/go/: README.md  client.go  client_test.go  connect.go  connect_test.go  go.mod
clients/python/: INSTALL.md  README.md  pyproject.toml
clients/python/aura_fhe/: __init__.py  client.py
clients/python/tests/: test_connect_local_server.py  test_keygen_options.py  test_smoke.py
clients/typescript/: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  package-lock.json  package.json
clients/typescript/examples/basic-operations/: index.ts
clients/typescript/src/: connect.test.ts  connect.ts  index.test.ts  index.ts  undici.d.ts
docs/: ARCHITECTURE.md  KEY_MANAGEMENT.md  PROTOCOL.md  QUICKSTART.md  WALKTHROUGH.md
examples/: README.md
examples/01-hello-fhe-node/: README.md  index.js  package.json
examples/02-hello-fhe-go/: README.md  go.mod  main.go
examples/03-hello-fhe-python/: README.md  hello.py
examples/04-browser/: README.md  index.html
examples/05-cli/: README.md  demo.sh
examples/06-secure-sum/: README.md  index.js  package.json
